# cppm-centralized-profile-manager

./: .dockerignore  .gitattributes  .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
backend/: .env.example  CLIENT_DESIGN.md  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  dependencies.py
backend/app/database/alembic/: env.py
backend/app/database/alembic/versions/: 001_initial_schema.py
backend/app/database/models/: __init__.py  auth.py  cloud.py  encryption.py  linkedin.py  profile_merge.py  resume.py  user.py
backend/app/integrations/cloud_storage/: __init__.py  base_storage.py  constants.py  dropbox.py  google_drive.py  onedrive.py
backend/app/integrations/oauth/: __init__.py  base_oauth.py  constants.py  dropbox_oauth.py  google_oauth.py  linkedin_oauth.py  microsoft_oauth.py
backend/app/modules/auth/: repository.py  router.py  schema.py  service.py
backend/app/modules/cloud_storage/: __init__.py  repository.py  router.py  schema.py  service.py
backend/app/modules/encryption/: __init__.py  repository.py  router.py  schema.py  service.py
backend/app/modules/linkedin_import/: __init__.py  parser.py  repository.py  router.py  schema.py  service.py
backend/app/modules/profile/: __init__.py  repository.py  router.py  schema.py  service.py
backend/app/modules/resume_import/: __init__.py  parser.py  repository.py  router.py  schema.py  service.py
backend/app/workers/: tasks.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_dependencies.py  test_main.py
backend/tests/api/: test_auth_router.py  test_cloud_storage_router.py  test_encryption_router.py  test_linkedin_router.py  test_profile_router.py  test_resume_router.py
backend/tests/integration/cloud_storage/: test_google_drive.py
backend/tests/integration/oauth/: test_google_oauth.py
backend/tests/unit/auth/: test_repository.py  test_service.py
backend/tests/unit/cloud_storage/: test_repository.py  test_service.py
backend/tests/unit/encryption/: test_repository.py  test_service.py
backend/tests/unit/linkedin_import/: test_parser.py  test_repository.py  test_service.py
backend/tests/unit/profile/: test_repository.py  test_service.py
backend/tests/unit/resume_import/: test_parser.py  test_repository.py  test_service.py
docs/: auth-flow.md  cloud-storage-flows.md  design-components.md  design-system-overview.md  design-tokens.md  encryption-model.md  frontend-architecture.md  frontend-task-breakdown.md  implementation-roadmap.md  import-flows.md  product-epics.md  product-overview.md  product-ux-principles.md
frontend/: README.md  pubspec.yaml
frontend/app/: README.md  (+1 more)
(+77 files in other folders)
